add modal, trailer

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>title</title>
-  <!-- <link rel="stylesheet" href="./sass/index.scss" /> -->
+
   <script src="./index.js" type="module"></script>
 </head>
 
@@ -14,17 +14,33 @@
   <section class="header">
     <div class="container">
       <div class="header__wrap">
-        <include src="./partials/layouts/header.html"></include>
+        <!-- <include src="./partials/layouts/header.html"></include> -->
       </div>
     </div>
   </section>
   <!-- main -->
   <main>
+
+    <ul class="gallery">
+      <li class="card__item" id="615777">
+        <img class="card__image" src="./img/film-poster.jpg" alt="poster">
+      </li>
+      <li class="card__item" id="747188">
+        <img class="card__image" src="./img/film-poster.jpg" alt="poster">
+      </li>
+      <li class="card__item" id="315162">
+        <img class="card__image" src="./img/film-poster.jpg" alt="poster">
+      </li>
+    </ul>
+
     <!-- Hero -->
-    <include src="./partials/pages/main/hero.html"></include>
+    <!-- <include src="./partials/pages/main/hero.html"></include> -->
   </main>
   <!--  Footer -->
-  <include src="./partials/layouts/footer.html"></include>
+  <!-- <include src="./partials/layouts/footer.html"></include> -->
+  <!-- Modal -->
+  <!-- <include src="./partials/layouts/modal.html"></include> -->
 </body>
+
 
 </html>
